--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.5"
+    "@astrojs/rss": "^4.0.11",
+    "astro": "^5.1.2"
   }
 }
